lazy loading script läuft. rechtsklick verbieten funktioniert.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -77,6 +77,7 @@
 
 <script src="{{ asset('assets/js/jquery-3.3.1.min.js') }}"></script>
 <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
+<script src="{{ asset('assets/js/jquery.lazy.min.js') }}"></script>
 <script src="{{ asset('assets/js/scripts.js') }}"></script>
 {% block javascripts %}{% endblock %}
 </body>
