--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 
+    <br/>
+    <h1>Administrator-Bereich:</h1>
+
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
