--- a/app/Resources/views/test/test.html.twig
+++ b/app/Resources/views/test/test.html.twig
@@ -1,40 +1,50 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div id="wrapper">
-        <div id="container">
+    <div>
+        <div>
 
+            <section class="lazy-loading grid images-overview">
+                <div class="grid-sizer" style="display: none;"></div>
 
-            <br/><br/>
-            <div oncontextmenu="alert('Diese Grafik ist kopiergeschützt! Wenn Sie etwas herunterladen möchten, kontaktieren Sie bitte den Administrator.');return false;">
-                Rechtsklick geht nicht!!!
-            </div>
-            <br/><br/><br/>
-
-
-
-            <section class="lazy-loading">
-                <img class="lazy"
+                {#
+                <img class="lazy rightclick-alert"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
                      data-src="{{ asset('assets/images/a.png') }}"
                      style="height:200px; position:relative; top:40px; transition: top .35s;"
                 />
-                <img class="lazy"
+                <img class="lazy rightclick-alert"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
                      data-src="{{ asset('assets/images/a.png') }}"
                      style="height:200px; position:relative; top:40px; transition: top .35s;"
                 />
-                <img class="lazy"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-                     data-src="{{ asset('assets/images/a.png') }}"
-                     style="height:200px; position:relative; top:40px; transition: top .35s;"
-                />
-                <img class="lazy"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-                     data-src="{{ asset('assets/images/a.png') }}"
-                     style="height:200px; position:relative; top:40px; transition: top .35s;"
-                />
+
+                <br>
+                <br>
+                <br>
+
+                #}
+
+                {% for archivierung in archivierungen %}
+
+                    <a href="{{ asset('assets/images/archivierungen/' ~ archivierung.links["klein"]) }}"
+                    class="grid-item">
+                        <img class="lazy" alt="detailview"
+                             src="{{ asset('assets/images/emptyPic.png') }}"
+                             data-src="{{ asset('assets/images/archivierungen/' ~ archivierung.links["klein"]) }}"
+                             blubsrc="{{ asset('assets/images/archivierungen/' ~ archivierung.links["klein"]) }}"
+                        />
+                    </a>
+
+                {% endfor %}
             </section>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
 
 
 
@@ -83,7 +93,7 @@
 
 {% block stylesheets %}
 <style>
-    body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
+    body {font: 18px/1.5 sans-serif; }
     h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
     h1 { font-size: 36px; }
     h2 { font-size: 21px; margin-bottom: 1em; }
