--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,22 +1,109 @@
-/*
- * Main
- */
+
+/* reset button */
+.img-button{
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    overflow: visible;
+
+    background: transparent;
+
+    /* inherit font & color from ancestor */
+    color: inherit;
+    font: inherit;
+
+    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+    line-height: normal;
+
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+
+    background: none;
+    border: 0;
+
+    /* Corrects font smoothing for webkit */
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+
+    /* Corrects inability to style clickable `input` types in iOS */
+    -webkit-appearance: none;
+}
+input::-moz-focus-inner,
+button::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+}
+
+
 body {
     background: #FFFFFF;
 }
 
-hr{
-    border-color: black;
+div.inhalt{
+    margin: 0;
+    padding: 1.5rem;
 }
 
-.top{
-    padding: 1.6rem;
-    padding-top: 1.6rem;
-}
-
-.top .hamburger{
-    float: right;
+.container-fluid{
     padding: 0;
-    padding-top: 0.7rem;
 }
 
+figure{
+    margin: 0;
+    padding: 0;
+}
+
+
+
+.top a.homepage-button{
+    display: inline-block;
+}
+.top a.homepage-button img{
+    width: 20vw;
+}
+
+.top .burger-button{
+    float: right;
+}
+.top .burger-button-open img{
+    width: 40px;
+    margin-top: 15px;
+}
+.top .burger-button-close img{
+    width: 35px;
+    margin-right: 2px;
+    margin-top: 11px;
+}
+
+
+.top hr{
+    border: 0;
+    border-top: 2px solid black;
+}
+
+.images-overview{
+    margin: -5px;
+}
+
+.images-overview figure {
+    width: 100%;
+    height: 100%;
+}
+.images-overview img {
+    height: auto;
+    max-height: 26vw;
+    max-width: 100%;
+}
+
+
+.grid-sizer,
+.grid-item {
+    width: 32%;
+    margin: 5px;
+}
+.grid-item--height3,
+.grid-item--height2{
+    height:400px;
+}
