--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,7 +1,7 @@
-
-/* reset button */
+/* style-reset button */
 .img-button{
     border: none;
+    outline: none!important;
     margin: 0;
     padding: 0;
     width: auto;
@@ -36,14 +36,21 @@ button::-moz-focus-inner {
     padding: 0;
 }
 
+/* general */
+h1,h2,h3,h4,h5,h6,p,a{
+    color: black;
+}
+a{
+    text-decoration: underline;
+}
 
 body {
-    background: #FFFFFF;
+    background: white;
 }
 
 div.inhalt{
     margin: 0;
-    padding: 1.5rem;
+    padding: 30px;
 }
 
 .container-fluid{
@@ -56,12 +63,12 @@ figure{
 }
 
 
-
+/* header */
 .top a.homepage-button{
     display: inline-block;
 }
 .top a.homepage-button img{
-    width: 20vw;
+    width: 215px;
 }
 
 .top .burger-button{
@@ -77,26 +84,23 @@ figure{
     margin-top: 11px;
 }
 
-
 .top hr{
     border: 0;
-    border-top: 2px solid black;
+    border-top: 1px solid black;
+    margin-top: 28px;
 }
 
+
+/* index */
 .images-overview{
     margin: -5px;
 }
 
-.images-overview figure {
-    width: 100%;
-    height: 100%;
-}
 .images-overview img {
     height: auto;
-    max-height: 26vw;
+    max-height: 29vw;
     max-width: 100%;
 }
-
 
 .grid-sizer,
 .grid-item {
